[workspace]
members = [
    "claude-ide",
]
resolver = "2"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket implementation
fastwebsockets = { version = "0.8", features = ["upgrade"] }
hyper = { version = "1.0", features = ["server", "http1"] }
http-body-util = "0.1"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
sha1 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and environment
dirs = "5.0"