[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
crux_http.workspace = true
serde = { workspace = true, features = ["derive"] }
async-sse = "5.1.0"
async-std = "1.12.0"
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.117"
lazy_static = "1.4.0"
uniffi = "0.27.2"
url = "2.5.0"
wasm-bindgen = "0.2.92"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.27.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.27.2", features = ["build"] }
